--- a/html-ödevleri/index.html
+++ b/html-ödevleri/index.html
@@ -9,6 +9,34 @@
     <h1>Muhammed G. Altunbaş</h1> <!-- İsmimi H1 etiketi ile girdim-->
     <h2>Hakkımda</h2> <!-- H2 etiketi ile alt başlık oluşturdum-->
     <p>Merhaba Ben Muhammed G. Altunbaş Çorumda yaşıyorum. Hobi olarak Yazılım öğreniyorum </p> <!-- p tag'ı ile çok kısa bir özet geçtim-->
-    
+    <h2>İlgi Alanlarım</h2>
+    <ol>
+        <li> Film
+            <ul>
+               <li><a href="https://www.imdb.com/title/tt0068646/" target="_blank">The Godfather</a></li>
+               <li>Intersteller</li>
+               <li>İron Man 3</li>
+            </ul>
+        </li>
+        <li> Dizi
+            <ul>
+                <li>Kurtlar Vadisi</li>
+                <li><a href="https://www.imdb.com/list/ls022444073/" target="_blank">Game of Thrones</a></li>
+                <li>Breaking Bad</li>
+             </ul>
+        </li>
+        <li> Kitap
+            <ul>
+                <li><a href="https://www.goodreads.com/book/show/40725568-takim-oyunu" target="_blank">Takım Oyunu</a></li>
+                <li>Mor İnek</li>
+                <li>Beyaz Zambaklar</li>
+            </ul>
+            
+        </li>
+    </ol>
+    <h2>Sevdigim diziler</h2>
+    <h3>Breakin Bad</h3>
+    <img src="C:\Users\Gürkan\Desktop\patika-ödevleri\images\image1.jpg" alt="Bu bir lorem görselidir" style="width: 700px;height: 400px;">
+    <p>Breaking Bad : ABD drama televizyon dizisidir. 52 yaşında, lisede kimya öğretmeni olan Walter White (Bryan Cranston), maddi açıdan ailesinin gereksinimlerini karşılayabilmek için araba yıkamacısında ek iş yapmaktadır ancak bir süre sonra ileri derecede akciğer kanseri olduğunu ve çok kısa bir ömrünün kaldığını öğrenir.</p>
 </body>
 </html>
